# dailycti

./: .env.example  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: entities.yaml  mitre_mappings.yaml  newsletter.yaml  scoring.yaml  sources.yaml
demo/: .env.example  articles.json  compose_newsletter.py  demo.sh  newsletter_output.html  newsletter_output.txt  newsletter_template.html  run_demo.py  scrape_feeds.py  send_newsletter.py  subscribers.csv.example
docs/: FEASIBILITY_PERSONALIZATION.md  PIPELINE.md  PRD.md
src/fidlie/ai/: dedup.py  entities.py  scoring.py
src/fidlie/ingest/: rss.py
src/fidlie/newsletter/: compose.py  deliver.py
tests/: conftest.py
tests/test_ai/: test_dedup.py  test_entities.py  test_scoring.py
tests/test_api/: test_entries.py  test_streams.py
tests/test_ingest/: test_rss.py
tests/test_newsletter/: test_compose.py  test_deliver.py
