[project]
name = "dailycti"
version = "0.1.0"
description = "Complete open-source Feedly reverse engineering for cybersecurity intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "DailyCTI Contributors" }]
keywords = ["feedly", "cybersecurity", "threat-intelligence", "newsletter", "cti", "rss", "dailycti"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Feed ingestion
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",

    # STIX/TAXII
    "stix2>=3.0.0",
    "taxii2-client>=2.3.0",

    # NLP & Entity extraction
    "spacy>=3.7.0",
    "ioc-finder>=7.0.0",
    "rapidfuzz>=3.0.0",

    # Deduplication & Clustering
    "datasketch>=1.6.0",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.0",

    # Summarization
    "sumy>=0.11.0",
    "anthropic>=0.39.0",

    # API
    "fastapi>=0.115.0",  # requires starlette>=0.49.1 (CVE-2025-62727)
    "uvicorn[standard]>=0.32.0",
    "PyJWT[crypto]>=2.8.0",  # replaces python-jose (CVE-2024-33663, CVE-2024-33664)
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache
    "redis>=5.0.0",

    # Email (simple SMTP -- smtplib is stdlib, aiosmtplib for async)
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.6",  # pinned: CVE-2025-27516 sandbox breakout fixed in 3.1.6

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "tldextract>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
fidlie = "fidlie.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fidlie"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
